--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ subprojects {
     targetCompatibility = JavaVersion.VERSION_11
 
     repositories {
+        mavenLocal()
         mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
@@ -36,11 +37,13 @@ subprojects {
 
     dependencies {
         [
-         enforcedPlatform('io.rsocket:rsocket-bom:1.0.1'),
+         enforcedPlatform('org.springframework:spring-messaging:5.2.8.BUILD-SNAPSHOT'),
+         enforcedPlatform('io.rsocket:rsocket-bom:1.0.2'),
          enforcedPlatform('org.springframework.boot:spring-boot-dependencies:2.3.2.BUILD-SNAPSHOT'),
          platform('org.junit:junit-bom:5.4.0'),
          platform('io.projectreactor:reactor-bom:Dysprosium-SR9'),
-         platform('io.github.resilience4j:resilience4j-bom:1.5.0'),
+         enforcedPlatform('io.rsocket:rsocket-bom:1.0.1'),
+         platform('io.github.resilience4j:resilience4j-bom:1.5.0')
         ].each {
             implementation it
             annotationProcessor it
