implements communication with rsocket-routing client and broker
Signed-off-by: Oleh Dokuka <shadowgun@i.ua>

--- a/service-speed-control-starter/src/main/resources/application.yml
+++ b/service-speed-control-starter/src/main/resources/application.yml
@@ -10,7 +10,12 @@ spring:
   devtools:
     livereload:
       enabled: false
-  rsocket:
-    server:
-      transport: websocket
-      mapping-path: /rsocket
+
+io.rsocket.routing.client:
+  route-id: ${random.uuid}
+  service-name: ${spring.cloud.consul.discovery.service-name}
+  tags:
+    INSTANCE_NAME: ${spring.application.name}
+  brokers:
+    - host: localhost
+      port: 8002
