--- a/big-brother-service/build.gradle
+++ b/big-brother-service/build.gradle
@@ -2,8 +2,7 @@ apply plugin: 'org.springframework.boot'
 
 dependencies {
     implementation project(':speed-adjuster-starter'),
-            project(':metrics-starter'),
-            'com.github.CollaborationInEncapsulation.spring-boot-rsocket:spring-boot-starter-rsocket'
+            project(':metrics-starter')
 
     runtimeClasspath 'org.springframework.boot:spring-boot-devtools'
 }
