--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
 plugins {
-    id 'org.springframework.boot' version '2.1.3.RELEASE' apply false
+    id 'org.springframework.boot' version '2.3.2.BUILD-SNAPSHOT' apply false
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'java'
 }
 
 apply plugin: 'base'
 
 allprojects {
     group 'ru.spring.reactive.in.practice'
+}
+
+repositories {
+    mavenCentral()
+    jcenter()
+    maven { url 'https://jitpack.io' }
+    maven { url 'https://repo.spring.io/milestone' }
+    maven { url 'https://repo.spring.io/snapshot' }
 }
 
 subprojects {
@@ -15,13 +25,19 @@ subprojects {
     targetCompatibility = JavaVersion.VERSION_11
 
     repositories {
+        mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url 'https://repo.spring.io/snapshot' }
     }
 
     dependencies {
-        [enforcedPlatform('org.springframework.boot:spring-boot-dependencies:2.1.3.RELEASE'),
+        [enforcedPlatform('org.springframework.boot:spring-boot-dependencies:2.3.2.BUILD-SNAPSHOT'),
          platform('org.junit:junit-bom:5.4.0'),
+         platform('io.projectreactor:reactor-bom:Dysprosium-SR9'),
+         enforcedPlatform('io.rsocket:rsocket-bom:1.0.1'),
+         platform('io.github.resilience4j:resilience4j-bom:1.5.0')
         ].each {
             implementation it
             annotationProcessor it
@@ -40,11 +56,8 @@ subprojects {
              'org.beryx:text-io:3.3.0',
              'org.beryx:text-io-web:3.3.0',
              'org.fusesource.jansi:jansi:1.17.1',
-             'org.codehaus.groovy:groovy-all:2.5.6',
+             'org.codehaus.groovy:groovy-all:3.0.3',
              'com.google.guava:guava:27.1-jre',
-             'com.github.CollaborationInEncapsulation.spring-boot-rsocket:spring-boot-starter-rsocket:0.0.1.RELEASE',
-             'io.rsocket:rsocket-transport-netty:0.11.21',
-             'io.rsocket:rsocket-core:0.11.21',
             ].each {
                 implementation it
             }
@@ -68,14 +81,24 @@ subprojects {
         }
 
         implementation 'org.springframework.boot:spring-boot-starter-webflux',
+                'org.springframework.boot:spring-boot-starter-rsocket',
                 'org.springframework.boot:spring-boot-starter-actuator',
                 'io.rsocket:rsocket-transport-netty',
+                'io.projectreactor.addons:reactor-pool',
                 'com.google.guava:guava',
                 'io.dropwizard.metrics:metrics-core',
                 'org.beryx:text-io',
                 'org.beryx:text-io-web',
                 'org.fusesource.jansi:jansi',
-                'io.projectreactor.addons:reactor-extra'
+                'io.projectreactor.addons:reactor-extra',
+                'io.github.resilience4j:resilience4j-ratelimiter',
+                'io.github.resilience4j:resilience4j-reactor',
+                'com.netflix.concurrency-limits:concurrency-limits-core:0.3.6',
+                'com.hazelcast:hazelcast',
+                'com.github.vladimir-bukhtoyarov:bucket4j-core:4.10.0',
+                'com.github.vladimir-bukhtoyarov:bucket4j-hazelcast-3:4.10.0',
+                'javax.cache:cache-api:1.1.1'
+
 
         testImplementation 'org.mockito:mockito-core',
                 'org.mockito:mockito-junit-jupiter',
