--- a/console-dashboard/src/main/resources/application.yml
+++ b/console-dashboard/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-dashboard:
-  letter-grabber-url: http://localhost:8080/actuator/rates
-  guard-url: http://localhost:8082/actuator/rates
-  letter-signature-url: http://localhost:8081/actuator/rates
-
+spring.rsocket.server:
+  port: 9090
+  transport: tcp
