--- a/metrics-starter/build.gradle
+++ b/metrics-starter/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
   implementation 'io.projectreactor.addons:reactor-pool'
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
   implementation 'org.springframework.boot:spring-boot-starter-rsocket'
 }
