polishes application configurations
Signed-off-by: Oleh Dokuka <shadowgun@i.ua>

--- a/speed-adjuster-starter/src/main/resources/application.yml
+++ b/speed-adjuster-starter/src/main/resources/application.yml
@@ -3,3 +3,10 @@ letter:
     error-strategy: fail
   processing:
     overflow-strategy: terminate
+
+
+
+spring:
+  devtools:
+    livereload:
+      enabled: false
