reorganizes and polishes project
Signed-off-by: Oleh Dokuka <shadowgun@i.ua>

--- a/agent-smith-service/build.gradle
+++ b/agent-smith-service/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'org.springframework.boot'
 
 dependencies {
-    implementation project(':speed-adjuster-starter'),
+    implementation project(':service-speed-control-starter'),
             project(':metrics-starter')
 
     runtimeClasspath 'org.springframework.boot:spring-boot-devtools'
